// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`popup/HoverMenu/Button open button 1`] = `
<a
  className="component"
  onClick={[Function]}
>
  <svg
    className="icon"
    fill="#859dc6"
    viewBox="0 841.9 18 18"
  >
    <path
      d="M1.2,852.6c1.1-1.7,3.6-4.3,7-4.3v-1.6c0.1-0.4,0.5-0.8,0.9-0.8c0.4,0,0.6,0.3,0.8,0.5l3.6,3.7c0.3,0.3,0.5,0.4,0.5,0.8c0,0.4-0.2,0.5-0.5,0.8l-3.6,3.7c-0.2,0.2-0.4,0.5-0.8,0.5c-0.5,0-0.8-0.4-0.8-0.8v-1.7H6.7c-1.6,0.1-4.4,1.4-4.7,2.5v2h14v-14H2v4H0v-5c0-0.6,0.4-1,1-1h16c0.5,0,1,0.4,1,1v16c0,0.5-0.4,1-1,1H1c-0.5,0-1-0.5-1-1c0,0,0-2.9,0-3.8C0,854.4,0.8,853.2,1.2,852.6z"
    />
  </svg>
  <div>
    text
  </div>
</a>
`;

exports[`popup/HoverMenu/Button read button 1`] = `
<a
  className="component"
  onClick={[Function]}
>
  <svg
    className="icon"
    fill="#80b67b"
    viewBox="0 0 18 18"
  >
    <path
      d="M17.5 4.7l-7.8-4.5-.6-.2-.5.2-7.9 4.6c-.4.2-.7.8-.7 1.2v11c0 .6.4 1 1 1h16c.5 0 1-.5 1-1v-11c0-.5-.1-1.1-.5-1.3zm-8.4-2.5l6.8 3.8-6.8 4-6.8-3.8 6.8-4zm6.9 14h-14v-7.6l6 3.2c.3.1.8.2 1 .2s.7 0 1-.2l6-3.2v7.6z"
    />
  </svg>
  <div>
    text
  </div>
</a>
`;

exports[`popup/HoverMenu/Button remove button 1`] = `
<a
  className="component"
  onClick={[Function]}
>
  <svg
    className="icon"
    fill="#e76a50"
    viewBox="0 0 18 18"
  >
    <path
      d="M12 7h-2v7h2v-7zm1.8-4l-.8-3h-8l-.8 3h-4.2v2h2v12c0 .6.4 1 1 1h12c.6 0 1-.4 1-1v-12h2v-2h-4.2zm-7.3-1h4.9l.3 1h-5.4l.2-1zm7.5 14h-10v-11h10v11zm-6-9h-2v7h2v-7z"
    />
  </svg>
  <div>
    text
  </div>
</a>
`;

exports[`popup/HoverMenu/Button spam button 1`] = `
<a
  className="component"
  onClick={[Function]}
>
  <svg
    className="icon"
    fill="#fcc93a"
    viewBox="0 0 18 18"
  >
    <path
      d="M15.4 3.8c-.8 1.6-1.9 2.6-2.9 2.6-1.4 0-2.7-1.9-2.9-6.4-4.7 1.7-4.5 6.3-4.9 8.3 0 .4-.2.6-.4.6-.8 0-2.5-2-3.1-3.7-2.4 2.5-1.8 12.5 7.7 12.8h.4c9.2 0 10.9-10.4 6.1-14.2z"
    />
  </svg>
  <div>
    text
  </div>
</a>
`;
